--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
 	   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-       <title>Zach Basu</title>
+       <title>Open Mike Chicago</title>
         <link href='https://cdn.knightlab.com/libs/soundcite/latest/css/player.css' rel='stylesheet' type='text/css'><script type='text/javascript' src='https://cdn.knightlab.com/libs/soundcite/latest/js/soundcite.min.js'></script>
        <link rel="stylesheet" href="style.css"/>
        <link rel="stylesheet" href="bootstrap.css"/>
@@ -22,7 +22,7 @@
       <nav>
         <ul>
           <li>
-            <a data-scroll-nav='0'>One Year <br>Later</a>
+            <a data-scroll-nav='0'>Basu <br>Later</a>
           </li>
           <li>
             <a data-scroll-nav='1'>YOUMedia Chicago</a>
