--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <nav>
         <ul>
           <li>
-            <a data-scroll-nav='0'>Basu <br>Later</a>
+            <a data-scroll-nav='0'>One Year <br>Later</a>
           </li>
           <li>
             <a data-scroll-nav='1'>YOUMedia Chicago</a>
